# awtrix-scripts

./: .gitignore  APP_LIST.md  README.md  README_CN.md  cleanup.py  config-example-CN.yaml  config-example-EN.yaml  config-example.yaml  config.py  helpers.py  main.py  mqtt_sender.py  pyproject.toml  spotify_auth.py  storage.py  test_cjk_to_initials_cases.py
shell_scripts/: network_speed.sh  test_format_bytes.sh
tasks/: __init__.py  base.py  task_air_quality.py  task_bilibili_followers.py  task_gas_price.py  task_github_contributions.py  task_github_followers.py  task_minecraft_server_status.py  task_spotify_current_playback.py  task_year_progress.py
